--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
@@ -15,12 +14,15 @@
     }
     h1 {
       text-align: center;
+      margin-bottom: 1em;
     }
     .device {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 1em 0;
+      margin-bottom: 1em;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.5em;
     }
     .device-name {
       flex: 1;
@@ -47,40 +49,17 @@
   <div id="device-list"></div>
 
   <script>
-    window.onload = function() {
-    const devices = [
-      "פושט רגליים", "מכווץ רגליים", "מותח זרועות לחזה", "מותח זרועות מלמעלה",
-      "זרועות פשוטות קדימה - ראי", "זרועות פשוטות אחורה - ראי",
-      "גב כפוף", "דחיפות זרועות", "שרירי בטן", "משקלות", "אחר 1", "אחר 2"
-    ];
+    window.addEventListener('DOMContentLoaded', () => {
+      const devices = [
+        "פושט רגליים", "מכווץ רגליים", "מותח זרועות לחזה", "מותח זרועות מלמעלה",
+        "זרועות פשוטות קדימה - ראי", "זרועות פשוטות אחורה - ראי",
+        "גב כפוף", "דחיפות זרועות", "שרירי בטן", "משקלות", "אחר 1", "אחר 2"
+      ];
 
-    const container = document.getElementById('device-list');
+      const container = document.getElementById('device-list');
 
-    devices.forEach(device => {
-      const row = document.createElement('div');
-      row.className = 'device';
+      devices.forEach(device => {
+        const row = document.createElement('div');
+        row.className = 'device';
 
-      const label = document.createElement('div');
-      label.className = 'device-name';
-      label.textContent = device;
-
-      const dots = document.createElement('div');
-      dots.className = 'dots';
-
-      for (let i = 0; i < 2; i++) {
-        const dot = document.createElement('div');
-        dot.className = 'dot';
-        dot.addEventListener('click', () => {
-          dot.classList.toggle('active');
-        });
-        dots.appendChild(dot);
-      }
-
-      row.appendChild(label);
-      row.appendChild(dots);
-      container.appendChild(row);
-    });
-      };
-  </script>
-</body>
-</html>
+        const label = document.createElement
